creating copyToDomainModel method